fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -22,7 +22,7 @@ float: left;
 
 .entirepage{
 min-width: 60em;
-max-height: 100%;
+height: 100%;
 }
 
 
